daemon-set-def.yml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: monitoring-daemon
  namespace: kube-system
spec: 
  selector: 
    matchLabels: 
      app: monitoring-agent
  template: 
    metadata:
      labels: 
        app: monitoring-agent
    spec: 
      containers: 
      -  name: monitoring-agent
         image: monitoring-agent
