image-security-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels: 
    name: nginx-pod
spec:
  containers:
   - name: nginx
     image: private-registry.io/apps/internal-app
  imagePullSecrets:                  #To create this secret use format below
   - name: regcred              

 #  kubectl create secret docker-registry regcred \
 #    --docker-server=private-registry.io      \
 #    --docker-username=reg-user               \
 #   --docker-password=reg-password           \
 #    --docker-email=registry-user@org.com
