multicontainer-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels: 
    name: simple-webapp
spec:
  containers:
   - name: simple-webapp
     image: simple-webapp
     ports: 
     - containerPort: 8080
   - name: log-agent
     image: log-agent
