node-select-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
  - name: data-processor
    image: data-processor
  nodeSelector:              # must label node proior to creating your pod
    size: Large              # kubectl label nodes <node-name>  size=Large
