pod-def-ConfigMap.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-color
  labels: 
    name:   name: simple-webapp-color
spec:
  containers:
   - name: simple-webapp-color
     image: simple-webapp-color
     ports: 
     - containerPort: 8080
     envFrom:                                        #envFrom is list so we can pass as many env variable as we want
       - configMapRef: 
            name: app-config
