pod-def-ManualSch.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: 
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 8080
  nodeName: node-01                               # only when creating a new pod
