pod-def-namespace.yml
apiVersion: v1
kind: Pod
metadata: 
  name: myapp-pod
  namespace: dev
  labels: 
     app: myapp
     type: front-end
spec:
  containers:            # is list/Array
   - name: nginx-container 
     image: nginx
