pod-def-scheduler.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: 
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
  schedulerName: my-custom-scheduler
