pod-def-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-color
  labels: 
    name:   name: simple-webapp-color
spec:
  containers:
   - name: simple-webapp-color
     image: simple-webapp-color
     ports: 
     - containerPort: 8080
