pod-toleration-def.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: 
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
  tolerations:                      # kubectl taint nodes node01 app=blue:NoSchedule
   -  key: "app"                    # all the value need to be encoded in double quotes
      operator: "Equal"
      value: "blue"
      effect: "NoSchedule"
