resource-pod-def.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: simple-webapp-color
  labels: 
    name: simple-webapp-color
spec: 
  containers: 
  - name: simple-webapp-color
    image: simple-webapp-color
    ports: 
     -  containerPort: 8080
    resources: 
      requests: 
        memory: "1Gi"            #default 256 Mi   Need to create LimitRange in the namespace to take these
        cpu: 1                   # default 0.5 vCPU
      limits: 
        memory: "2Gi"           #default 512 Mi   
        cpu: 2                  #default 1 vCPU
