static-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
  labels: 
    name: static-busybox
spec:
  containers:
  - command: 
    - sleep
    - "1000"
  - name: static-busybox               # To create a static pod you need to place this image in the directory path mention in the kubelet process --config
    image: busybox:1.28.4
