volume-mount-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh","-c"]
    args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
    volumeMounts: 
     - mountPath: /opt 
       name: data-volume

  volumes: 
   - name: data-volume
     hostPath: 
       path: /data                              # good for single node 
       type: Directory                          # in multinode the pod expect the /data node on that directory to have the same data


#Solution to store it in extenal storage
# volumes: 
#   - name: data-volume
#      awsElasticBlockStore:
#         volumeID: <volume-id>
#         fsType: ext4
