service-definition.yml
apiVersion: v1
kind: Service
metadata: 
   name: myapp-service
spec: 
  type: NodePort
  ports: 
   -  targetPort: 80                # port on the pod
      port: 80                      # port on the service itself (*required)
      nodePort: 30008               # port exposed on the node for outside world access
  selector: 
     app: myapp
     type: front-end                # to select the pod with this label
